--- a/main.html
+++ b/main.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html lang="ko-KR">
+<html lang="ko-kr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="image/favicon.ico">
-    <script src="./js/main.js"></script>
+    <title>이디야</title>
+    <link rel="shortcut icon" href="./FDS15_Project-master/images/favicon.ico">
 </head>
+
 <body>
     <header>
         <h1 class="">
             <a href="main.html">
-                <img src="" alt="ediya">
+                <img src="./FDS15_Project-master/images/ediya-logo.gif" alt="ediya">
             </a>
         </h1>
 
         <nav>
             <button>
-                <img src="" alt="button">
+                <img src="./FDS15_Project-master/images/navigation-button.gif" alt="button">
             </button>
 
             <ul>
@@ -32,7 +31,7 @@
             </ul>
 
             <button>
-                <img src="" alt="close">
+                <img src="./FDS15_Project-master/images/detail-close.gif" alt="close">
             </button>
         </nav>
     </header>
@@ -46,7 +45,8 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="iced-cherry-blossoms-latte">
+                            <img src="./FDS15_Project-master/images/iced-cherry-blossoms-latte.png"
+                                alt="iced-cherry-blossoms-latte">
                             <span>ICED 벚꽃라떼</span>
                         </button>
                     </h4>
@@ -75,7 +75,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="./FDS15_Project-master/images/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -83,7 +83,8 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="hot-cherry-blossoms-latte">
+                            <img src="./FDS15_Project-master/images/hot-cherry-blossoms-latte.png"
+                                alt="hot-cherry-blossoms-latte">
                             <span>HOT 벚꽃라떼</span>
                         </button>
                     </h4>
@@ -113,7 +114,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="./FDS15_Project-master/images/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -121,7 +122,8 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="iced-brownie-chocolate">
+                            <img src="./FDS15_Project-master/images/iced-brownie-chocolate.png"
+                                alt="iced-brownie-chocolate">
                             <span>ICED 브라우니 쇼콜라</span>
                         </button>
                     </h4>
@@ -151,7 +153,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="./FDS15_Project-master/images/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -159,7 +161,8 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="hot-brownie-chocolate">
+                            <img src="./FDS15_Project-master/images/hot-brownie-chocolate.png"
+                                alt="hot-brownie-chocolate">
                             <span>HOT 브라우니 쇼콜라</span>
                         </button>
                     </h4>
@@ -189,7 +192,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="./FDS15_Project-master/images/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -197,7 +200,8 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="jeju-green-tangerine-tea">
+                            <img src="./FDS15_Project-master/images/jeju-green-tangerine-tea.png"
+                                alt="jeju-green-tangerine-tea">
                             <span>제주청귤 오리지널</span>
                         </button>
                     </h4>
@@ -227,7 +231,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="./FDS15_Project-master/images/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -235,7 +239,8 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="jeju-green-tangerine-blossom">
+                            <img src="./FDS15_Project-master/images/jeju-green-tangerine-blossom.png"
+                                alt="jeju-green-tangerine-blossom">
                             <span>제주청귤 블라썸</span>
                         </button>
                     </h4>
@@ -265,7 +270,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="./FDS15_Project-master/images/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -273,7 +278,7 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="pomegranate-tea">
+                            <img src="./FDS15_Project-master/images/pomegranate-tea.png" alt="pomegranate-tea">
                             <span>석류 오리지널</span>
                         </button>
                     </h4>
@@ -303,7 +308,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="./FDS15_Project-master/images/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -311,7 +316,8 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="pomegranate-apple-lime">
+                            <img src="./FDS15_Project-master/images/pomegranate-apple-lime.png"
+                                alt="pomegranate-apple-lime">
                             <span>석류 애플라임</span>
                         </button>
                     </h4>
@@ -341,10 +347,11 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="./FDS15_Project-master/images/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
+
             </ul>
         </section>
     </main>
