Docs : Added img url

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <header>
         <h1 class="">
             <a href="main.html">
-                <img src="" alt="ediya">
+                <img src="image/ediya-logo.gif" alt="ediya">
             </a>
         </h1>
 
         <nav>
             <button>
-                <img src="" alt="button">
+                <img src="image/navigation-button.gif" alt="button">
             </button>
 
             <ul>
@@ -32,7 +32,7 @@
             </ul>
 
             <button>
-                <img src="" alt="close">
+                <img src="image/detail-close.gif" alt="close">
             </button>
         </nav>
     </header>
@@ -46,7 +46,7 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="iced-cherry-blossoms-latte">
+                            <img src="image/iced-cherry-blossoms-latte.png" alt="iced-cherry-blossoms-latte">
                             <span>ICED 벚꽃라떼</span>
                         </button>
                     </h4>
@@ -75,7 +75,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -83,7 +83,7 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="hot-cherry-blossoms-latte">
+                            <img src="image/hot-cherry-blossoms-latte.png" alt="hot-cherry-blossoms-latte">
                             <span>HOT 벚꽃라떼</span>
                         </button>
                     </h4>
@@ -113,7 +113,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -121,7 +121,7 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="iced-brownie-chocolate">
+                            <img src="image/iced-brownie-chocolate.png" alt="iced-brownie-chocolate">
                             <span>ICED 브라우니 쇼콜라</span>
                         </button>
                     </h4>
@@ -151,7 +151,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -159,7 +159,7 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="hot-brownie-chocolate">
+                            <img src="image/hot-brownie-chocolate.png" alt="hot-brownie-chocolate">
                             <span>HOT 브라우니 쇼콜라</span>
                         </button>
                     </h4>
@@ -189,7 +189,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -197,7 +197,7 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="jeju-green-tangerine-tea">
+                            <img src="image/jeju-green-tangerine-tea.png" alt="jeju-green-tangerine-tea">
                             <span>제주청귤 오리지널</span>
                         </button>
                     </h4>
@@ -227,7 +227,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -235,7 +235,7 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="jeju-green-tangerine-blossom">
+                            <img src="image/jeju-green-tangerine-blossom.png" alt="jeju-green-tangerine-blossom">
                             <span>제주청귤 블라썸</span>
                         </button>
                     </h4>
@@ -265,7 +265,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -273,7 +273,7 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="pomegranate-tea">
+                            <img src="image/pomegranate-tea.png" alt="pomegranate-tea">
                             <span>석류 오리지널</span>
                         </button>
                     </h4>
@@ -303,7 +303,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
@@ -311,7 +311,7 @@
                 <li>
                     <h4 class="앞면">
                         <button>
-                            <img src="" alt="pomegranate-apple-lime">
+                            <img src="image/pomegranate-apple-lime.png" alt="pomegranate-apple-lime">
                             <span>석류 애플라임</span>
                         </button>
                     </h4>
@@ -341,7 +341,7 @@
                         </dl>
 
                         <button type="button">
-                            <img src="" alt="close">
+                            <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
                 </li>
