docs : heder during

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="image/favicon.ico">
-    <script src="./js/main.js"></script>
 </head>
 
 <body>
@@ -20,7 +19,7 @@
         </h1>
 
         <nav class="header-nav">
-            <button class="header-nav__button">
+            <button class="header-nav__button open">
                 <img src="image/navigation-button.gif" alt="button">
             </button>
 
@@ -31,11 +30,15 @@
                 <li><a>이디야 컬쳐랩</a></li>
                 <li><a>공지사항</a></li>
                 <li><a>매장찾기</a></li>
+                <li>
+                    <button class="header-nav__button close">
+                        <img src="image/detail-close.gif" alt="close">
+                    </button>
+                </li>
+                
             </ul>
 
-            <button class="header-nav__button">
-                <img src="image/detail-close.gif" alt="close">
-            </button>
+            
         </nav>
     </header>
 
