--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
         </h1>
 
         <nav class="header-nav">
-            <button class="header-nav__button">
+            <button class="header-nav__button open">
                 <img src="image/navigation-button.gif" alt="button">
             </button>
 
             <ul class="heder-nav__menu">
-                <li><a>메뉴</a></li>
-                <li><a>이디야 멤버스</a></li>
-                <li><a>이디야 커피랩</a></li>
-                <li><a>이디야 컬쳐랩</a></li>
-                <li><a>공지사항</a></li>
-                <li><a>매장찾기</a></li>
+                <li><a href="#">메뉴</a></li>
+                <li><a href="#">이디야 멤버스</a></li>
+                <li><a href="#">이디야 커피랩</a></li>
+                <li><a href="#">이디야 컬쳐랩</a></li>
+                <li><a href="#">공지사항</a></li>
+                <li><a href="#">매장찾기</a></li>
+                <li>
+                    <button class="header-nav__button close">
+                        X                   </button>
+                </li>
             </ul>
-
-            <button class="header-nav__button">
-                <img src="image/detail-close.gif" alt="close">
-            </button>
         </nav>
     </header>
 
