docs: header during

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="image/navigation-button.gif" alt="button">
             </button>
 
-            <ul class="heder-nav__menu">
+            <ul class="header-nav__menu">
                 <li><a>메뉴</a></li>
                 <li><a>이디야 멤버스</a></li>
                 <li><a>이디야 커피랩</a></li>
