Docs : Added header css
v.1.0.1

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <img src="image/navigation-button.gif" alt="button">
             </button>
 
-            <ul class="heder-nav__menu">
+            <ul class="header-nav__menu">
                 <li><a href="#">메뉴</a></li>
                 <li><a href="#">이디야 멤버스</a></li>
                 <li><a href="#">이디야 커피랩</a></li>
@@ -33,8 +33,7 @@
                 <li><a href="#">공지사항</a></li>
                 <li><a href="#">매장찾기</a></li>
                 <li>
-                    <button class="header-nav__button close">
-                        X                   </button>
+                    <button class="fas fa-times header-nav__button close"></button>
                 </li>
             </ul>
         </nav>
