--- a/index.html
+++ b/index.html
@@ -26,16 +26,14 @@
             </button>
 
             <ul class="header-nav__menu">
-                <li><a>메뉴</a></li>
-                <li><a>이디야 멤버스</a></li>
-                <li><a>이디야 커피랩</a></li>
-                <li><a>이디야 컬쳐랩</a></li>
-                <li><a>공지사항</a></li>
-                <li><a>매장찾기</a></li>
+                <li><a href="#">메뉴</a></li>
+                <li><a href="#">이디야 멤버스</a></li>
+                <li><a href="#">이디야 커피랩</a></li>
+                <li><a href="#">이디야 컬쳐랩</a></li>
+                <li><a href="#">공지사항</a></li>
+                <li><a href="#">매장찾기</a></li>
                 <li>
-                    <button class="header-nav__button close">
-                        <img src="image/detail-close.gif" alt="close">
-                    </button>
+                    <button class="header-nav__button fas fa-times close"></button>
                 </li>
                 
             </ul>
