접근성 1차 검토 후 수정 - button, a tag 툴팁 추가 - img 대체텍스트 수정

--- a/index.html
+++ b/index.html
@@ -15,30 +15,27 @@
 <body>
     <header>
         <h1 class="header__logo">
-            <a href="main.html">
-                <img src="image/ediya-logo.gif" alt="ediya">
+            <a href="main.html" title="메인페이지로 이동">
+                <img src="image/ediya-logo.gif" alt="이디야커피 로고 이미지">
             </a>
         </h1>
 
         <nav class="header-nav">
-            <button class="header-nav__button open">
-                <img src="image/navigation-button.gif" alt="button">
+            <button class="header-nav__button open" title="메인메뉴 열기">
+                <img src="image/navigation-button.gif" alt="">
             </button>
 
             <ul class="header-nav__menu">
-                <li><a href="#">메뉴</a></li>
-                <li><a href="#">이디야 멤버스</a></li>
-                <li><a href="#">이디야 커피랩</a></li>
-                <li><a href="#">이디야 컬쳐랩</a></li>
-                <li><a href="#">공지사항</a></li>
-                <li><a href="#">매장찾기</a></li>
+                <li><a href="#" title="이디야 커피 메뉴 보기">메뉴</a></li>
+                <li><a href="#" title="이디야 멤버스로 이동">이디야 멤버스</a></li>
+                <li><a href="#" title="이디야 커피랩으로 이동">이디야 커피랩</a></li>
+                <li><a href="#" title="이디야 컬쳐랩으로 이동">이디야 컬쳐랩</a></li>
+                <li><a href="#" title="공지사항으로 이동">공지사항</a></li>
+                <li><a href="#" title="매장찾기 항목으로 이동">매장찾기</a></li>
                 <li>
-                    <button class="header-nav__button fas fa-times close"></button>
-                </li>
-                
-            </ul>
-
-            
+                    <button class="header-nav__button fas fa-times close" title="메인메뉴 닫기"></button>
+                </li>               
+            </ul>       
         </nav>
     </header>
 
@@ -50,7 +47,7 @@
             <ul class="main-juice-container">
                 <li class="main-juice-container__item ice-cbl">
                     <h4 class="main-juice__front">
-                        <button>
+                        <button title="ICED 벛꽃라떼 자세히 보기">
                             <img src="image/iced-cherry-blossoms-latte.png" alt="iced-cherry-blossoms-latte">
                             <span>ICED 벚꽃라떼</span>
                         </button>
@@ -79,7 +76,7 @@
                             <dd>(0mg)</dd>
                         </dl>
 
-                        <button type="button">
+                        <button type="button" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
@@ -87,7 +84,7 @@
 
                 <li class="main-juice-container__item hot-cbl">
                     <h4 class="main-juice__front">
-                        <button>
+                        <button title="HOT 벛꽃라떼 자세히 보기">
                             <img src="image/hot-cherry-blossoms-latte.png" alt="hot-cherry-blossoms-latte">
                             <span>HOT 벚꽃라떼</span>
                         </button>
@@ -117,7 +114,7 @@
                             <dd>(0mg)</dd>
                         </dl>
 
-                        <button type="button">
+                        <button type="button" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
@@ -125,7 +122,7 @@
 
                 <li class="main-juice-container__item ice-choco">
                     <h4 class="main-juice__front">
-                        <button>
+                        <button title="ICED 브라우니 쇼콜라 자세히 보기">
                             <img src="image/iced-brownie-chocolate.png" alt="iced-brownie-chocolate">
                             <span>ICED 브라우니 쇼콜라</span>
                         </button>
@@ -155,7 +152,7 @@
                             <dd>(12mg)</dd>
                         </dl>
 
-                        <button type="button">
+                        <button type="button" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
@@ -163,7 +160,7 @@
 
                 <li class="main-juice-container__item hot-choco">
                     <h4 class="main-juice__front">
-                        <button>
+                        <button title="HOT 브라우니 쇼콜라 자세히 보기">
                             <img src="image/hot-brownie-chocolate.png" alt="hot-brownie-chocolate">
                             <span>HOT 브라우니 쇼콜라</span>
                         </button>
@@ -193,7 +190,7 @@
                             <dd>(12mg)</dd>
                         </dl>
 
-                        <button type="button">
+                        <button type="button" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
@@ -201,7 +198,7 @@
 
                 <li class="main-juice-container__item tanger-tea">
                     <h4 class="main-juice__front">
-                        <button>
+                        <button title="제주청귤 오리지널 자세히보기">
                             <img src="image/jeju-green-tangerine-tea.png" alt="jeju-green-tangerine-tea">
                             <span>제주청귤 오리지널</span>
                         </button>
@@ -230,7 +227,7 @@
                             <dt>카페인</dt>
                             <dd>(0mg)</dd>
                         </dl>
-                        <button type="button">
+                        <button type="button" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
@@ -238,7 +235,7 @@
 
                 <li class="main-juice-container__item tanger-bloss">
                     <h4 class="main-juice__front">
-                        <button>
+                        <button title="제주 청귤 블라썸 자세히 보기">
                             <img src="image/jeju-green-tangerine-blossom.png" alt="jeju-green-tangerine-blossom">
                             <span>제주청귤 블라썸</span>
                         </button>
@@ -268,7 +265,7 @@
                             <dd>(0mg)</dd>
                         </dl>
 
-                        <button type="button">
+                        <button type="button" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
@@ -276,7 +273,7 @@
 
                 <li class="main-juice-container__item pome-tea">
                     <h4 class="main-juice__front">
-                        <button>
+                        <button title="석류 오리지널 자세히 보기">
                             <img src="image/pomegranate-tea.png" alt="pomegranate-tea">
                             <span>석류 오리지널</span>
                         </button>
@@ -306,7 +303,7 @@
                             <dd>(0mg)</dd>
                         </dl>
 
-                        <button type="button">
+                        <button type="button" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
@@ -314,7 +311,7 @@
 
                 <li class="main-juice-container__item pome-apple">
                     <h4 class="main-juice__front">
-                        <button>
+                        <button title="석류 애플라임 자세히 보기">
                             <img src="image/pomegranate-apple-lime.png" alt="pomegranate-apple-lime">
                             <span>석류 애플라임</span>
                         </button>
@@ -344,7 +341,7 @@
                             <dd>(0mg)</dd>
                         </dl>
 
-                        <button type="button">
+                        <button type="button" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="close">
                         </button>
                     </div>
