접근성 추가수정

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li class="main-juice-container__item ice-cbl">
                     <h4 class="main-juice__front">
                         <button title="ICED 벛꽃라떼 자세히 보기">
-                            <img src="image/iced-cherry-blossoms-latte.png" alt="iced-cherry-blossoms-latte">
+                            <img src="image/iced-cherry-blossoms-latte.png" alt="ICED 벚꽃라떼 제품 이미지">
                             <span>ICED 벚꽃라떼</span>
                         </button>
                     </h4>
@@ -77,7 +77,7 @@
                         </dl>
 
                         <button type="button" title="내용 닫기">
-                            <img src="image/detail-close.gif" alt="close">
+                            <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
                 </li>
@@ -85,7 +85,7 @@
                 <li class="main-juice-container__item hot-cbl">
                     <h4 class="main-juice__front">
                         <button title="HOT 벛꽃라떼 자세히 보기">
-                            <img src="image/hot-cherry-blossoms-latte.png" alt="hot-cherry-blossoms-latte">
+                            <img src="image/hot-cherry-blossoms-latte.png" alt="HOT 벚꽃라떼 제품 이미지">
                             <span>HOT 벚꽃라떼</span>
                         </button>
                     </h4>
@@ -115,7 +115,7 @@
                         </dl>
 
                         <button type="button" title="내용 닫기">
-                            <img src="image/detail-close.gif" alt="close">
+                            <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
                 </li>
@@ -123,7 +123,7 @@
                 <li class="main-juice-container__item ice-choco">
                     <h4 class="main-juice__front">
                         <button title="ICED 브라우니 쇼콜라 자세히 보기">
-                            <img src="image/iced-brownie-chocolate.png" alt="iced-brownie-chocolate">
+                            <img src="image/iced-brownie-chocolate.png" alt="ICED 브라우니 쇼콜라 제품 이미지">
                             <span>ICED 브라우니 쇼콜라</span>
                         </button>
                     </h4>
@@ -153,7 +153,7 @@
                         </dl>
 
                         <button type="button" title="내용 닫기">
-                            <img src="image/detail-close.gif" alt="close">
+                            <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
                 </li>
@@ -161,7 +161,7 @@
                 <li class="main-juice-container__item hot-choco">
                     <h4 class="main-juice__front">
                         <button title="HOT 브라우니 쇼콜라 자세히 보기">
-                            <img src="image/hot-brownie-chocolate.png" alt="hot-brownie-chocolate">
+                            <img src="image/hot-brownie-chocolate.png" alt="HOT 브라우니 쇼콜라 제품 이미지">
                             <span>HOT 브라우니 쇼콜라</span>
                         </button>
                     </h4>
@@ -191,7 +191,7 @@
                         </dl>
 
                         <button type="button" title="내용 닫기">
-                            <img src="image/detail-close.gif" alt="close">
+                            <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
                 </li>
@@ -199,7 +199,7 @@
                 <li class="main-juice-container__item tanger-tea">
                     <h4 class="main-juice__front">
                         <button title="제주청귤 오리지널 자세히보기">
-                            <img src="image/jeju-green-tangerine-tea.png" alt="jeju-green-tangerine-tea">
+                            <img src="image/jeju-green-tangerine-tea.png" alt="제주 청귤 오리지널 제품 이미지">
                             <span>제주청귤 오리지널</span>
                         </button>
                     </h4>
@@ -228,7 +228,7 @@
                             <dd>(0mg)</dd>
                         </dl>
                         <button type="button" title="내용 닫기">
-                            <img src="image/detail-close.gif" alt="close">
+                            <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
                 </li>
@@ -236,7 +236,7 @@
                 <li class="main-juice-container__item tanger-bloss">
                     <h4 class="main-juice__front">
                         <button title="제주 청귤 블라썸 자세히 보기">
-                            <img src="image/jeju-green-tangerine-blossom.png" alt="jeju-green-tangerine-blossom">
+                            <img src="image/jeju-green-tangerine-blossom.png" alt="제주청귤 블라썸 제품 이미지">
                             <span>제주청귤 블라썸</span>
                         </button>
                     </h4>
@@ -266,7 +266,7 @@
                         </dl>
 
                         <button type="button" title="내용 닫기">
-                            <img src="image/detail-close.gif" alt="close">
+                            <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
                 </li>
@@ -274,7 +274,7 @@
                 <li class="main-juice-container__item pome-tea">
                     <h4 class="main-juice__front">
                         <button title="석류 오리지널 자세히 보기">
-                            <img src="image/pomegranate-tea.png" alt="pomegranate-tea">
+                            <img src="image/pomegranate-tea.png" alt="석류 오지리널 제품이미지">
                             <span>석류 오리지널</span>
                         </button>
                     </h4>
@@ -304,7 +304,7 @@
                         </dl>
 
                         <button type="button" title="내용 닫기">
-                            <img src="image/detail-close.gif" alt="close">
+                            <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
                 </li>
@@ -312,7 +312,7 @@
                 <li class="main-juice-container__item pome-apple">
                     <h4 class="main-juice__front">
                         <button title="석류 애플라임 자세히 보기">
-                            <img src="image/pomegranate-apple-lime.png" alt="pomegranate-apple-lime">
+                            <img src="image/pomegranate-apple-lime.png" alt="석류 애플라임 제품 이미지">
                             <span>석류 애플라임</span>
                         </button>
                     </h4>
@@ -342,7 +342,7 @@
                         </dl>
 
                         <button type="button" title="내용 닫기">
-                            <img src="image/detail-close.gif" alt="close">
+                            <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
                 </li>
