docs : finished main css styling

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                         <dl class="main-juice__back-item up">
                             <dt>
                                 <span>ICED 벚꽃라떼</span>
-                                <span>Cherry Blossom Latte</span></dt>
+                                <span>Cherry Blossom Latte</span>
+                            </dt>
                             <dd>은은한 벚꽃향과 라즈베리 화이트 초콜릿 토핑이 올라간 핑크빛 라떼</dd>
                         </dl>
 
