Docs : Added main.css finish

--- a/index.html
+++ b/index.html
@@ -33,18 +33,12 @@
                 <li><a href="#">공지사항</a></li>
                 <li><a href="#">매장찾기</a></li>
                 <li>
-<<<<<<< HEAD
-                    <button class="fas fa-times header-nav__button close"></button>
-                </li>
-            </ul>
-=======
                     <button class="header-nav__button fas fa-times close"></button>
                 </li>
                 
             </ul>
 
             
->>>>>>> 1e98c3596322be405971404f17e9f2d3e26626ae
         </nav>
     </header>
 
@@ -56,7 +50,7 @@
             <ul class="main-juice-container">
                 <li class="main-juice-container__item ice-cbl">
                     <h4 class="main-juice__front">
-                        <button>
+                        <button class="active">
                             <img src="image/iced-cherry-blossoms-latte.png" alt="iced-cherry-blossoms-latte">
                             <span>ICED 벚꽃라떼</span>
                         </button>
@@ -66,15 +60,16 @@
                         <dl class="main-juice__back-item up">
                             <dt>
                                 <span>ICED 벚꽃라떼</span>
-                                <span>Cherry Blossom Latte</span></dt>
+                                <span>Cherry Blossom Latte</span>
+                            </dt>
                             <dd>은은한 벚꽃향과 라즈베리 화이트 초콜릿 토핑이 올라간 핑크빛 라떼</dd>
                         </dl>
 
                         <dl class="main-juice__back-item down">
                             <dt>칼로리</dt>
                             <dd>(393kcal)</dd>
-                            <dt>당류</dt>
-                            <dd>(35g)</dd>
+                            <dt class="second-line">당류</dt>
+                            <dd class="second-line">(35g)</dd>
                             <dt>단백질</dt>
                             <dd>(7g)</dd>
                             <dt>포화지방</dt>
