--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="image/favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous">
     <link rel="stylesheet" media="screen and (max-width: 559px)" href="/css/small.css">
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" defer></script>
 </head>
 
 <body>
@@ -35,8 +35,9 @@
                 <li><a href="#" title="매장찾기 항목으로 이동">매장찾기</a></li>
                 <li>
                     <button class="header-nav__button fas fa-times close" title="메인메뉴 닫기"></button>
+
                 </li>               
-            </ul>       
+                </ul>       
         </nav>
     </header>
 
