--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
                 <li><a href="#" title="매장찾기 항목으로 이동">매장찾기</a></li>
                 <li>
                     <button class="header-nav__button fas fa-times close" title="메인메뉴 닫기"></button>
-
                 </li>               
-                </ul>       
+            </ul>       
         </nav>
     </header>
 
@@ -79,7 +78,7 @@
                             <dd>(0mg)</dd>
                         </dl>
 
-                        <button type="button" title="내용 닫기">
+                        <button type="button" class="juice__back-btn" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
@@ -117,7 +116,7 @@
                             <dd>(0mg)</dd>
                         </dl>
 
-                        <button type="button" title="내용 닫기">
+                        <button type="button" class="juice__back-btn" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
@@ -154,8 +153,8 @@
                             <dt>카페인</dt>
                             <dd>(12mg)</dd>
                         </dl>
-
-                        <button type="button" title="내용 닫기">
+                        
+                        <button type="button" class="juice__back-btn" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
@@ -193,7 +192,7 @@
                             <dd>(12mg)</dd>
                         </dl>
 
-                        <button type="button" title="내용 닫기">
+                        <button type="button" class="juice__back-btn" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
@@ -230,7 +229,7 @@
                             <dt>카페인</dt>
                             <dd>(0mg)</dd>
                         </dl>
-                        <button type="button" title="내용 닫기">
+                        <button type="button" class="juice__back-btn" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
@@ -268,7 +267,7 @@
                             <dd>(0mg)</dd>
                         </dl>
 
-                        <button type="button" title="내용 닫기">
+                        <button type="button" class="juice__back-btn" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
@@ -306,7 +305,7 @@
                             <dd>(0mg)</dd>
                         </dl>
 
-                        <button type="button" title="내용 닫기">
+                        <button type="button" class="juice__back-btn" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
@@ -344,7 +343,7 @@
                             <dd>(0mg)</dd>
                         </dl>
 
-                        <button type="button" title="내용 닫기">
+                        <button type="button" class="juice__back-btn" title="내용 닫기">
                             <img src="image/detail-close.gif" alt="">
                         </button>
                     </div>
