Docs : Finish ediya clone site vel.1
Fixed some code and added meta tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="author" content="team.Miso">
+    <meta name="description" content="Ediya clone site">
+    <meta name="keywords" content="HTML5,CSS3,Responsive,clone,Ediya,Fastcampus,frontend,mini-project">
+    <title>Ediya</title>
     <link rel="shortcut icon" href="image/favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
         integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous">
