working for navi-menu

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img src="image/navigation-button.gif" alt="">
             </button>
 
-            <ul class="header-nav__menu">
+            <ul class="header-nav__menu flag">
                 <li><a href="#" title="이디야 커피 메뉴 보기">메뉴</a></li>
                 <li><a href="#" title="이디야 멤버스로 이동">이디야 멤버스</a></li>
                 <li><a href="#" title="이디야 커피랩으로 이동">이디야 커피랩</a></li>
